8268362: [REDO] C2 crash when compile negative Arrays.copyOf length after loop